--- a/guides/m1x/magefordev/mage-for-dev-3.html
+++ b/guides/m1x/magefordev/mage-for-dev-3.html
@@ -218,6 +218,7 @@ app/code/local/Magentotutorial/Helloworld/sql
 <p>That contains the following
 
 <pre>
+<?php
 class Magentotutorial_Helloworld_IndexController extends Mage_Core_Controller_Front_Action {        
     public function indexAction() {
         echo 'Hello Index!';
